--- a/templates/resume/resume-main.html
+++ b/templates/resume/resume-main.html
@@ -146,10 +146,10 @@
                                         </ul>
                                     </a>
                                 </div>
-                                <div class="sc-5566ac85-8 fIiywE">
-                                    <div><button type="button" class="sc-c76ca16c-0 iqiSmj"></button><span>비공개</span>
-                                        <div class="sc-8ec83e27-0 ecMSAQ">
-                                            <div class="sc-8ec83e27-1 kZajeB"></div>
+                                <div class="resume-content-bottom">
+                                    <div><button type="button" class="resume-open-button"></button><span>비공개</span>
+                                        <div class="resume-question">
+                                            <div class="resume-question-inner"></div>
                                         </div>
                                     </div><span>2025.01.30 등록</span>
                                 </div>
