--- a/templates/resume/resume-main.html
+++ b/templates/resume/resume-main.html
@@ -156,7 +156,7 @@
                             </div>
                         </li>
                         <li class="resume-content3">
-                            <div class="sc-5566ac85-9 eeJUZf"><button type="button"><span style="display:flex"><svg
+                            <div class="new-resume"><button type="button"><span style="display:flex"><svg
                                             xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"
                                             viewBox="0 0 20 20">
                                             <path fill="#00DD6D" fill-rule="evenodd"
