--- a/static/css/resume/resume-main2.css
+++ b/static/css/resume/resume-main2.css
@@ -9,7 +9,8 @@
     -webkit-tap-highlight-color: transparent
 }
 
-.slick-list,.slick-slider {
+.slick-list,
+.slick-slider {
     position: relative;
     display: block
 }
@@ -29,7 +30,8 @@
     cursor: hand
 }
 
-.slick-slider .slick-list,.slick-slider .slick-track {
+.slick-slider .slick-list,
+.slick-slider .slick-track {
     transform: translateZ(0)
 }
 
@@ -42,7 +44,8 @@
     margin-right: auto
 }
 
-.slick-track:after,.slick-track:before {
+.slick-track:after,
+.slick-track:before {
     display: table;
     content: ""
 }
@@ -103,7 +106,7 @@
 
 @media (max-width: 480px) {
     .typography-heading1 {
-        font-size:40px;
+        font-size: 40px;
         line-height: 52px
     }
 }
@@ -115,7 +118,7 @@
 
 @media (max-width: 480px) {
     .typography-heading2 {
-        font-size:36px;
+        font-size: 36px;
         line-height: 48px
     }
 }
@@ -127,7 +130,7 @@
 
 @media (max-width: 480px) {
     .typography-heading3 {
-        font-size:32px;
+        font-size: 32px;
         line-height: 42px
     }
 }
@@ -139,7 +142,7 @@
 
 @media (max-width: 480px) {
     .typography-heading4 {
-        font-size:32px;
+        font-size: 32px;
         line-height: 42px
     }
 }
@@ -151,7 +154,7 @@
 
 @media (max-width: 480px) {
     .typography-heading5 {
-        font-size:30px;
+        font-size: 30px;
         line-height: 40px
     }
 }
@@ -163,7 +166,7 @@
 
 @media (max-width: 480px) {
     .typography-heading6 {
-        font-size:28px;
+        font-size: 28px;
         line-height: 38px
     }
 }
@@ -180,7 +183,7 @@
 
 @media (max-width: 480px) {
     .typography-title2 {
-        font-size:24px;
+        font-size: 24px;
         line-height: 32px
     }
 }
@@ -192,7 +195,7 @@
 
 @media (max-width: 480px) {
     .typography-title3 {
-        font-size:22px;
+        font-size: 22px;
         line-height: 30px
     }
 }
@@ -209,7 +212,7 @@
 
 @media (max-width: 480px) {
     .typography-subTitle1 {
-        font-size:20px;
+        font-size: 20px;
         line-height: 28px
     }
 }
@@ -265,11 +268,11 @@
 }
 
 .scroll-vertical::-webkit-scrollbar-track:hover {
-    background-color: var(--scrollbar-track-hover,var(--scrollbar-track))
+    background-color: var(--scrollbar-track-hover, var(--scrollbar-track))
 }
 
 .scroll-vertical::-webkit-scrollbar-track:active {
-    background-color: var(--scrollbar-track-active,var(--scrollbar-track-hover,var(--scrollbar-track)))
+    background-color: var(--scrollbar-track-active, var(--scrollbar-track-hover, var(--scrollbar-track)))
 }
 
 .scroll-vertical::-webkit-scrollbar-thumb {
@@ -278,11 +281,11 @@
 }
 
 .scroll-vertical::-webkit-scrollbar-thumb:hover {
-    background-color: var(--scrollbar-thumb-hover,var(--scrollbar-thumb))
+    background-color: var(--scrollbar-thumb-hover, var(--scrollbar-thumb))
 }
 
 .scroll-vertical::-webkit-scrollbar-thumb:active {
-    background-color: var(--scrollbar-thumb-active,var(--scrollbar-thumb-hover,var(--scrollbar-thumb)))
+    background-color: var(--scrollbar-thumb-active, var(--scrollbar-thumb-hover, var(--scrollbar-thumb)))
 }
 
 .scroll-vertical::-webkit-scrollbar-corner {
@@ -291,22 +294,22 @@
 }
 
 .scroll-vertical::-webkit-scrollbar-corner:hover {
-    background-color: var(--scrollbar-corner-hover,var(--scrollbar-corner))
+    background-color: var(--scrollbar-corner-hover, var(--scrollbar-corner))
 }
 
 .scroll-vertical::-webkit-scrollbar-corner:active {
-    background-color: var(--scrollbar-corner-active,var(--scrollbar-corner-hover,var(--scrollbar-corner)))
+    background-color: var(--scrollbar-corner-active, var(--scrollbar-corner-hover, var(--scrollbar-corner)))
 }
 
 .scroll-vertical {
     scrollbar-width: auto;
-    scrollbar-color: var(--scrollbar-thumb,initial) var(--scrollbar-track,initial)
+    scrollbar-color: var(--scrollbar-thumb, initial) var(--scrollbar-track, initial)
 }
 
 .scroll-vertical::-webkit-scrollbar {
     display: block;
-    width: var(--scrollbar-width,16px);
-    height: var(--scrollbar-height,16px)
+    width: var(--scrollbar-width, 16px);
+    height: var(--scrollbar-height, 16px)
 }
 
 .scroll-vertical {
@@ -319,7 +322,9 @@
     scrollbar-width: auto
 }
 
-*,:after,:before {
+*,
+:after,
+:before {
     --tw-border-spacing-x: 0;
     --tw-border-spacing-y: 0;
     --tw-translate-x: 0;
@@ -344,7 +349,7 @@
     --tw-ring-inset: ;
     --tw-ring-offset-width: 0px;
     --tw-ring-offset-color: #fff;
-    --tw-ring-color: rgba(5,122,242,.5);
+    --tw-ring-color: rgba(5, 122, 242, .5);
     --tw-ring-offset-shadow: 0 0 #0000;
     --tw-ring-shadow: 0 0 #0000;
     --tw-shadow: 0 0 #0000;
@@ -398,7 +403,7 @@
     --tw-ring-inset: ;
     --tw-ring-offset-width: 0px;
     --tw-ring-offset-color: #fff;
-    --tw-ring-color: rgba(5,122,242,.5);
+    --tw-ring-color: rgba(5, 122, 242, .5);
     --tw-ring-offset-shadow: 0 0 #0000;
     --tw-ring-shadow: 0 0 #0000;
     --tw-shadow: 0 0 #0000;
@@ -433,31 +438,31 @@
 
 @media (min-width: 640px) {
     .container {
-        max-width:640px
+        max-width: 640px
     }
 }
 
 @media (min-width: 768px) {
     .container {
-        max-width:768px
+        max-width: 768px
     }
 }
 
 @media (min-width: 1024px) {
     .container {
-        max-width:1024px
+        max-width: 1024px
     }
 }
 
 @media (min-width: 1280px) {
     .container {
-        max-width:1280px
+        max-width: 1280px
     }
 }
 
 @media (min-width: 1536px) {
     .container {
-        max-width:1536px
+        max-width: 1536px
     }
 }
 
@@ -648,7 +653,7 @@
 }
 
 .transform {
-    transform: translate(var(--tw-translate-x),var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
 }
 
 .cursor-pointer {
@@ -824,8 +829,8 @@
 }
 
 .\!text-\[\#666\] {
-    --tw-text-opacity: 1!important;
-    color: rgb(102 102 102/var(--tw-text-opacity))!important
+    --tw-text-opacity: 1 !important;
+    color: rgb(102 102 102/var(--tw-text-opacity)) !important
 }
 
 .text-\[\#222\] {
@@ -883,9 +888,9 @@
 }
 
 .shadow {
-    --tw-shadow: 0 1px 3px 0 rgba(0,0,0,.1),0 1px 2px -1px rgba(0,0,0,.1);
-    --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),0 1px 2px -1px var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow)
+    --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px -1px rgba(0, 0, 0, .1);
+    --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
 }
 
 .outline-none {
@@ -901,7 +906,8 @@
     --tw-blur: blur(8px)
 }
 
-.blur,.filter {
+.blur,
+.filter {
     filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow)
 }
 
@@ -911,10 +917,10 @@
 }
 
 .transition {
-    transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,-webkit-backdrop-filter;
-    transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
-    transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter,-webkit-backdrop-filter;
-    transition-timing-function: cubic-bezier(.4,0,.2,1);
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
     transition-duration: .15s
 }
 
@@ -927,4 +933,89 @@
     border-color: rgb(0 221 109/var(--tw-border-opacity))
 }
 
-.checked\:content-\[url\(\'\/assets\/images\/attach-checked\.svg\'\)\]:checked{--tw-content:url(/assets/images/attach-checked.svg);content:var(--tw-content)}.peer:hover~.peer-hover\:block{display:block}.hover\:bg-\[\#01C662\]:hover{--tw-bg-opacity:1;background-color:rgb(1 198 98/var(--tw-bg-opacity))}.hover\:bg-\[\#333\]:hover{--tw-bg-opacity:1;background-color:rgb(51 51 51/var(--tw-bg-opacity))}.hover\:bg-\[\#d4d4d4\]:hover{--tw-bg-opacity:1;background-color:rgb(212 212 212/var(--tw-bg-opacity))}.hover\:bg-\[\#f8f8f8\]:hover{--tw-bg-opacity:1;background-color:rgb(248 248 248/var(--tw-bg-opacity))}.hover\:font-bold:hover{font-weight:700}.hover\:text-\[\#222\]:hover{--tw-text-opacity:1;color:rgb(34 34 34/var(--tw-text-opacity))}.hover\:text-\[\#2D65F2\]:hover{--tw-text-opacity:1;color:rgb(45 101 242/var(--tw-text-opacity))}.hover\:underline:hover{text-decoration-line:underline}.disabled\:bg-\[\#d4d4d4\]:disabled{--tw-bg-opacity:1;background-color:rgb(212 212 212/var(--tw-bg-opacity))}.disabled\:text-\[\#d4d4d4\]:disabled{--tw-text-opacity:1;color:rgb(212 212 212/var(--tw-text-opacity))}.disabled\:text-white:disabled{--tw-text-opacity:1;color:rgb(255 255 255/var(--tw-text-opacity))}@media (min-width:768px){.md\:w-\[340px\]{width:340px}}@font-face{font-family:__PretendardFont_f53396;src:url(/_next/static/media/ff840cfebfb63b0c-s.p.woff2) format("woff2");font-display:swap}@font-face{font-family:__PretendardFont_Fallback_f53396;src:local("Arial");ascent-override:93.76%;descent-override:23.75%;line-gap-override:0.00%;size-adjust:101.55%}.__className_f53396{font-family:__PretendardFont_f53396,__PretendardFont_Fallback_f53396,-apple-system,system-ui,Apple SD Gothic Neo,Malgun Gothic,Nanum Gothic,sans-serif}
+.checked\:content-\[url\(\'\/assets\/images\/attach-checked\.svg\'\)\]:checked {
+    --tw-content: url(/assets/images/attach-checked.svg);
+    content: var(--tw-content)
+}
+
+.peer:hover~.peer-hover\:block {
+    display: block
+}
+
+.hover\:bg-\[\#01C662\]:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(1 198 98/var(--tw-bg-opacity))
+}
+
+.hover\:bg-\[\#333\]:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(51 51 51/var(--tw-bg-opacity))
+}
+
+.hover\:bg-\[\#d4d4d4\]:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(212 212 212/var(--tw-bg-opacity))
+}
+
+.hover\:bg-\[\#f8f8f8\]:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(248 248 248/var(--tw-bg-opacity))
+}
+
+.hover\:font-bold:hover {
+    font-weight: 700
+}
+
+.hover\:text-\[\#222\]:hover {
+    --tw-text-opacity: 1;
+    color: rgb(34 34 34/var(--tw-text-opacity))
+}
+
+.hover\:text-\[\#2D65F2\]:hover {
+    --tw-text-opacity: 1;
+    color: rgb(45 101 242/var(--tw-text-opacity))
+}
+
+.hover\:underline:hover {
+    text-decoration-line: underline
+}
+
+.disabled\:bg-\[\#d4d4d4\]:disabled {
+    --tw-bg-opacity: 1;
+    background-color: rgb(212 212 212/var(--tw-bg-opacity))
+}
+
+.disabled\:text-\[\#d4d4d4\]:disabled {
+    --tw-text-opacity: 1;
+    color: rgb(212 212 212/var(--tw-text-opacity))
+}
+
+.disabled\:text-white:disabled {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255/var(--tw-text-opacity))
+}
+
+@media (min-width:768px) {
+    .md\:w-\[340px\] {
+        width: 340px
+    }
+}
+
+@font-face {
+    font-family: __PretendardFont_f53396;
+    src: url("https://jumpit.saramin.co.kr/_next/static/media/ff840cfebfb63b0c-s.p.woff2") format("woff2");
+    font-display: swap
+}
+
+@font-face {
+    font-family: __PretendardFont_Fallback_f53396;
+    src: local("Arial");
+    ascent-override: 93.76%;
+    descent-override: 23.75%;
+    line-gap-override: 0.00%;
+    size-adjust: 101.55%
+}
+
+.__className_f53396 {
+    font-family: __PretendardFont_f53396, __PretendardFont_Fallback_f53396, -apple-system, system-ui, Apple SD Gothic Neo, Malgun Gothic, Nanum Gothic, sans-serif
+}
