--- a/templates/resume/resume-main.html
+++ b/templates/resume/resume-main.html
@@ -92,26 +92,6 @@
                                 </path>
                             </g>
                         </svg></a></div>
-                <div class="media-searchbox"><button
-                        class="media-searchbtn"><svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="24" height="24" aria-hidden="true">
-                            <g fill="none" fill-rule="evenodd"
-                                stroke="#222" stroke-width="2">
-                                <circle cx="11.111" cy="11.111"
-                                    r="7.111" stroke-linecap="round"
-                                    stroke-linejoin="round"></circle>
-                                <path d="m20 20-3.867-3.867"></path>
-                            </g>
-                        </svg></button><button type="button"><span
-                            style="display: flex;"><svg
-                                xmlns="http://www.w3.org/2000/svg"
-                                width="24" height="24" fill="none"
-                                viewBox="0 0 24 24">
-                                <path fill="#000" fill-rule="evenodd"
-                                    d="M4 6a1 1 0 0 0 0 2h16a1 1 0 1 0 0-2H4Zm-1 6.5a1 1 0 0 1 1-1h16a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1ZM3 18a1 1 0 0 1 1-1h16a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1Z"
-                                    clip-rule="evenodd"></path>
-                            </svg></span></button></div>
                 <div class="searchbox-top old">
                     <div class="searchbox-inner">
                         <div class="search-box"><input
@@ -136,26 +116,39 @@
                                     </g>
                                 </svg></button></div><button
                             class="close-button">닫기</button>
-                        <div class="searchbox-hidden">
-                            <div class="recentsearch">
-                                <h4>최근 검색어</h4>
-                            </div>
-                            <div class="searchbox-hidden-content">최근
-                                검색어가
-                                없습니다.<br></div>
-                        </div>
-                        <div class="searchbox-onclick"></div>
+                        
                     </div>
-                    <div class="searchbox-hidden">
+                    <div class="searchbox-hidden" style="">
                         <div class="recentsearch">
                             <h4>최근 검색어</h4>
                         </div>
                         <div class="searchbox-hidden-content">최근 검색어가
                             없습니다.<br></div>
                     </div>
-                    
+
                 </div>
                 <div class="searchbox-onclick old"></div>
+                <div class="media-searchbox"><button
+                        class="media-searchbtn"><svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="24" height="24" aria-hidden="true">
+                            <g fill="none" fill-rule="evenodd"
+                                stroke="#222" stroke-width="2">
+                                <circle cx="11.111" cy="11.111"
+                                    r="7.111" stroke-linecap="round"
+                                    stroke-linejoin="round"></circle>
+                                <path d="m20 20-3.867-3.867"></path>
+                            </g>
+                        </svg></button><button type="button"><span
+                            style="display: flex;"><svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="24" height="24" fill="none"
+                                viewBox="0 0 24 24">
+                                <path fill="#000" fill-rule="evenodd"
+                                    d="M4 6a1 1 0 0 0 0 2h16a1 1 0 1 0 0-2H4Zm-1 6.5a1 1 0 0 1 1-1h16a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1ZM3 18a1 1 0 0 1 1-1h16a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1Z"
+                                    clip-rule="evenodd"></path>
+                            </svg></span></button></div>
+
             </div>
             <nav aria-label="Main navigation" class="nav-sc3">
                 <ul class="header4">
@@ -189,8 +182,8 @@
                 </ul>
             </nav>
         </div>
-        
-        
+
+
     </header>
     <div class="searchbox-top formedia"></div>
     <div class="searchbox-onclick formedia"></div>
