--- a/static/css/resume/resume-main1.css
+++ b/static/css/resume/resume-main1.css
@@ -224,6 +224,13 @@
 @media (max-width: 1080px) {
     .searchbox-top {
         display: none;
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 64px;
+        background-color: rgb(255, 255, 255);
+        z-index: 11;
     }
 }
 
@@ -361,7 +368,7 @@
     border-radius: 8px;
     z-index: 6;
     padding: 24px;
-    display: none;
+    display: block;
 }
 
 @media (max-width: 1080px) {
@@ -374,6 +381,7 @@
         border: unset;
         border-radius: unset;
         box-shadow: unset;
+        display: block;
     }
 }
 
