--- a/static/css/main/positionSort.css
+++ b/static/css/main/positionSort.css
@@ -72,7 +72,7 @@ header{
     top: 0px;
     left: 0px;
     right: 0px;
-    z-index: 5;
+    z-index: 10;
     background-color: rgb(255, 255, 255);
     width: 100%;
     border-bottom: 1px solid rgb(228, 228, 228);
@@ -82,56 +82,34 @@ header{
     position: relative;
     max-width: 1060px;
     margin: 0px auto;
-    width: 100%;
 }
 
 .fixedNavigation{
-    position: fixed;
     display: flex;
-    background-color: white;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     height: 64px;
     transition: 0.2s;
-    left: 0;
-    z-index: 4;
-    width: 100%;
 }
 
 .mainNavigation{
-    position: fixed;
-    top: 64px; /* fixedNav의 높이에 맞춰 아래로 위치 */
-    left: 0px;
-    display: flex;
-    background-color: white;
-    justify-content: space-around;
+    display: none;
+    justify-content: space-between;
     align-items: center;
     height: 56px;
-    width: 100%;
-    transition: 0.3s ease;
-    transform: translateY(-100%); /* 처음에는 화면 밖으로 숨김 */
-    opacity: 0; /* 처음에 숨김 */
-    z-index: 2;
-    border-bottom: 1px solid rgb(228, 228, 228);
+    z-index: 30;
 }
 
 .mainNavigation.show {
-    opacity: 1;
-    transform: translateY(0); /* 화면에 위치하게 설정 */
-}
-
-.leftNavigation,
-.rightNavigation {
     display: flex;
-    list-style-type: none;
+    justify-content: space-between;
+    align-items: center;
+    height: 56px;
 }
 
 .leftNavigation {
-    transform: translateX(55px);
-}
-
-.rightNavigation {
-    transform: translateX(-55px);
+    display: flex;
+    margin-left: -20px;
 }
 
 .leftNavigation:hover a {
@@ -140,6 +118,21 @@ header{
 
 .leftNavigation a:hover {
     opacity: 1;
+}
+
+.leftNavigation>li{
+    margin: 0;
+    position: relative;
+    padding: 0px 20px;
+}
+
+.leftNavigation>li>a{
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    padding: 10px 4px;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 .leftNavigation li,
@@ -153,12 +146,10 @@ header{
 
 .pageLogo{
     display: inline-flex;
-    transform: translateX(-80px);
 }
 
 .mainSearch{
     position: relative;
-    transform: translateX(80px);
 }
 
 .pageLogo{
@@ -222,18 +213,16 @@ header{
 }
 
 .searchWindow {
-    position: fixed; /* 화면 전체 기준으로 배치 */
-    top: 64px; /* fixedNav 아래 */
-    left: 50%;
-    transform: translateX(5px);
+    position: absolute;
+    top: 51px;
+    left: 0px;
     width: 472px;
     background: rgb(255, 255, 255);
     border: 1px solid rgb(228, 228, 228);
     box-shadow: rgba(20, 20, 20, 0.12) 0px 8px 16px;
     border-radius: 8px;
-    z-index: 999999; /* 최상위 */
+    z-index: 999;
     padding: 24px;
-    visibility: hidden;
 }
 
 .searchWindowTitle{
@@ -263,12 +252,6 @@ main{
     padding-top: 120px;
 }
 
-.leftNavigation{
-    display: flex;
-    margin-left: -20px;
-    transform: translateX(-40px);
-}
-
 .leftNavigation>li{
     position: relative;
     padding: 0px 20px;
@@ -292,7 +275,6 @@ main{
     margin-right: -12px;
     font-size: 14px;
     line-height: 20px;
-    transform: translateX(50px);
 }
 
 .rightNavigation>li{
