--- a/templates/main/positionSort.html
+++ b/templates/main/positionSort.html
@@ -13,17 +13,6 @@
     </head>
     <body>
         <!-- 헤더 시작 -->
-        <!-- 검색창 시작 -->
-        <div class="searchWindow">
-            <div class="searchWindowTitle">
-                <h4>최근 검색어</h4>
-            </div>
-            <div class="searchWindowContents">
-                최근 검색어가 없습니다.
-                <br />
-            </div>
-        </div>
-        <!-- // 검색창 끝 -->
         <header class="header">
             <div class="headerWrapper">
                 <div class="fixedNavigation">
@@ -166,6 +155,17 @@
                             </div>
                             <button class="closeButton">닫기</button>
                         </div>
+                        <!-- 누르면 뜨는 검색창 시작 -->
+                        <div class="searchWindow">
+                            <div class="searchWindowTitle">
+                                <h4>최근 검색어</h4>
+                            </div>
+                            <div class="searchWindowContents">
+                                최근 검색어가 없습니다.
+                                <br />
+                            </div>
+                        </div>
+                        <!-- // 누르면 뜨는 검색창 끝 -->
                     </div>
                 </div>
                 <nav class="mainNavigation">
