--- a/templates/main/positionDetail.html
+++ b/templates/main/positionDetail.html
@@ -454,7 +454,7 @@
                                     </svg>
                                 </button>
                             </div>
-                            <div class="imageBanner">
+                            <div class="imageBanner scroll-vertical">
                                 <div>
                                     <img
                                         src="https://cdn.jumpit.co.kr/lg/images/syyun_26773/20232607112656155_1080_790.webp"
@@ -521,7 +521,7 @@
                                     ></path>
                                 </svg>
                             </button>
-                            <div class="compnayDetailHide"></div>
+                            <div class="gradient compnayDetailHide"></div>
                         </div>
                     </div>
                 </section>
