--- a/static/css/main/positionDetail.css
+++ b/static/css/main/positionDetail.css
@@ -779,10 +779,25 @@ li>.btns{
     margin-top: 16px;
 }
 
-.compnayDetailHide{
+.gradient{
     position: absolute;
     bottom: 64px;
     width: 100%;
     height: 32px;
     background: linear-gradient(rgba(255, 255, 255, 0.5) 0%, rgb(255, 255, 255) 100%);
+}
+
+/* 스크롤바 스타일 */
+::-webkit-scrollbar {
+    width: 7.5px;  /* 스크롤바의 너비 */
+    height: 10.5px; /* 수평 스크롤바 높이 */
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px; /* 스크롤바 배경 둥글게 */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #c4c4c4; /* 스크롤바 색 */
+    border-radius: 10px; /* 스크롤바 thumb 둥글게 */
 }
