--- a/templates/resume/resume-edit.html
+++ b/templates/resume/resume-edit.html
@@ -747,13 +747,13 @@
                                                     <div class="memberedu-schoolname1 memberedu-schoolname3"><input
                                                             placeholder="학과명을 입력해주세요" maxlength="255" type="text"
                                                             value="" name="educations.0.majorName"></div>
-                                                    <div class="sc-4d995a0d-14 gotsUm">
-                                                        <div class="sc-4d995a0d-3 sc-4d995a0d-13 kStggW eJNUo"><input
+                                                    <div class="member-grade">
+                                                        <div class="memberedu-schoolname1 memberedu-schoolname4"><input
                                                                 placeholder="학점" maxlength="4" type="text" value=""
                                                                 name="educations.0.creditPoint"></div>
-                                                        <div class="sc-5a671f5b-0 iQIfrQ">
-                                                            <div class="sc-5a671f5b-2 bfZHww">기준학점<input
-                                                                    class="sc-5a671f5b-3 fvLhsD" type="text"
+                                                        <div class="memberinfo-text2-inner">
+                                                            <div class="member-standard-grade">기준학점<input
+                                                                    class="memberedu-class-choice-input" type="text"
                                                                     name="educations.0.creditPointType"
                                                                     inputmode="none"><button type="button"><span
                                                                         style="display: flex;"><svg
