--- a/static/css/main/positionDetail.css
+++ b/static/css/main/positionDetail.css
@@ -788,16 +788,419 @@ li>.btns{
 }
 
 /* 스크롤바 스타일 */
-::-webkit-scrollbar {
+.scroll-vertical::-webkit-scrollbar {
     width: 7.5px;  /* 스크롤바의 너비 */
     height: 10.5px; /* 수평 스크롤바 높이 */
 }
 
-::-webkit-scrollbar-track {
+.scroll-vertical::-webkit-scrollbar-track {
     border-radius: 10px; /* 스크롤바 배경 둥글게 */
 }
 
-::-webkit-scrollbar-thumb {
+.scroll-vertical::-webkit-scrollbar-thumb {
     background-color: #c4c4c4; /* 스크롤바 색 */
     border-radius: 10px; /* 스크롤바 thumb 둥글게 */
+}
+
+.positionRecommend{
+    background: rgb(251, 251, 253);
+}
+
+.positionIng{
+    position: relative;
+    max-width: 1080px;
+    margin: 0px auto;
+    padding: 40px 0px 56px;
+    text-align: left;
+}
+
+.positionIng .tit{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 18px;
+    line-height: 26px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    padding: 0px 8px 6px;
+}
+
+.progressPositionWrap{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    width: 100%;
+}
+
+.mainContentCard{
+    opacity: initial;
+    position: relative;
+    width: calc(25% - 20px);
+    flex: 1 1 22%;
+    box-sizing: border-box;
+    padding: 10px;
+    max-width: 270px;
+}
+
+.imgBox{
+    width: 100%;
+    height: 166px;
+    border-radius: 4px;
+    overflow: hidden;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+
+.contentText{
+    padding: 12px 0px 36px;
+    width: calc(100% - 7px);
+}
+
+.imgBox>img{
+    width: 250px;
+    height: 166px;
+    object-fit: cover;
+    transition: 0.3s;
+}
+
+.imgBox:hover > img{
+    transform: scale(1.2);
+}
+
+.imgDdayBadge{
+    position: absolute;
+    gap: 4px;
+    display: flex;
+    top: 12px;
+    left: 12px;
+    z-index: 1;
+}
+
+.dayLeft{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    padding: 2px 8px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 4px;
+    color: rgb(68, 68, 68);
+    font-size: 13px;
+    line-height: 18px;
+    font-weight: 700;
+    box-sizing: border-box;
+    border: 1px solid rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px 0px, rgba(0, 0, 0, 0.08) 0px -2px 4px 0px;
+}
+
+.count{
+    position: absolute;
+    margin-left: auto;
+    color: rgb(255, 255, 255);
+    font-size: 13px;
+    line-height: 18px;
+    z-index: 1;
+    display: none;
+    top: 16px;
+    right: 16px;
+}
+
+.imgBox:hover > .count{
+    display: flex;
+}
+
+.scrapButton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+}
+
+.scrapButton > svg{
+    width: 16px;
+    height: 16px;
+}
+
+.scrapButton > svg > path{
+    fill: rgb(255, 255, 255);
+}
+
+.companyName{
+    display: flex;
+    align-items: center;
+}
+
+.positionCardTitle{
+    margin-top: 6px;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    line-clamp: 2;
+    -webkit-line-clamp: 2;
+    box-orient: vertical;
+    -webkit-box-orient: vertical;
+}
+
+.mainContentCard:hover .positionCardTitle{
+    text-decoration: underline;
+}
+
+.companyName>span{
+    font-size: 14px;
+    line-height: 20px;
+    color: rgb(68, 68, 68);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.requiredSkill{
+    display: flex;
+    margin-top: 8px;
+    font-size: 13px;
+    line-height: 18px;
+    color: rgb(153, 153, 153);
+    height: 18px;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+
+.requiredSkill>li:first-child{
+    max-width: 58%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.requiredSkill>li{
+    margin-right: 5px;
+}
+
+.companyLocation{
+    display: flex;
+    font-size: 13px;
+    line-height: 18px;
+    color: rgb(153, 153, 153);
+    margin-top: 4px;
+}
+
+.companyLocation>li:first-child{
+    max-width: 58%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.companyLocation>li{
+    margin-right: 5px;
+}
+
+.companyLocation>li:last-child::before{
+    content: "· ";
+}
+
+.sidePositionInfo>.wrap{
+    position: sticky;
+    top: 180px;
+}
+
+.wrap>.celebration{
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(230, 241, 253);
+    border-radius: 4px 4px 0px 0px;
+}
+
+.wrap>.celebration>span{
+    display: flex;
+    align-items: center;
+    gap: 2px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: rgb(68, 68, 68);
+}
+
+.celebration>span>em{
+    font-weight: 700;
+    color: rgb(1, 118, 237);
+}
+
+.celebration > span > svg > path:first-child {
+    fill: rgb(1, 118, 237);
+}
+
+.wrap>.contents{
+    display: flex;
+    flex-direction: column;
+    padding: 32px 32px 40px;
+    border-right: 1px solid rgb(228, 228, 228);
+    border-bottom: 1px solid rgb(228, 228, 228);
+    border-left: 1px solid rgb(228, 228, 228);
+    border-image: initial;
+    border-top: unset;
+    box-sizing: border-box;
+    border-radius: 0px 0px 4px 4px;
+}
+
+.contents>.company{
+    display: flex;
+    gap: 18px;
+}
+
+.contents>.details{
+    margin: 24px 0px 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    font-size: 15px;
+    line-height: 22px;
+}
+
+.contents>.company>img{
+    border-radius: 100px;
+    border: 1px solid rgb(228, 228, 228);
+}
+
+.contents>.company>.name{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.contents>.company>.name>h2{
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 26px;
+    color: rgb(0, 0, 0);
+}
+
+.contents>.company>.name>span{
+    display: flex;
+    align-items: center;
+    gap: 2px;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 22px;
+    color: rgb(68, 68, 68);
+}
+
+.contents>.company>.name>span>svg{
+    width: 16px;
+    height: 16px;
+}
+
+.sideButtonWrapper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.wrap>.banner{
+    position: relative;
+    margin-top: 16px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.contents>.details>div{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0px 14px;
+}
+
+.contents>.details>div>dt{
+    width: 76px;
+    min-width: 76px;
+    color: rgb(102, 102, 102);
+}
+
+.details > div > dd > strong{
+    font-weight: 500;
+    color: rgb(68, 68, 68);
+}
+
+.details > div > dd > strong > span {
+    margin-left: 2px;
+    font-size: 15px;
+    line-height: 22px;
+    color: rgb(136, 136, 136);
+}
+
+.applyButton{
+    font-size: 15px;
+    line-height: 22px;
+    width: 100%;
+    height: 48px;
+    font-weight: bold;
+    margin-bottom: 16px;
+    background: rgb(0, 221, 109);
+    border: 1px solid rgb(0, 221, 109);
+    color: rgb(255, 255, 255);
+    padding: 0px 16px;
+    border-radius: 3px;
+}
+
+.subButtons{
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    gap: 25px;
+    line-height: 20px;
+}
+
+.subButtonList{
+    position: relative;
+    font-size: 14px;
+    color: rgb(34, 34, 34);
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.subButtonList:not(:last-child)::after{
+    content: "";
+    position: absolute;
+    right: -12px;
+    top: 4px;
+    width: 1px;
+    height: 10px;
+    background: rgb(234, 234, 234);
+}
+
+.subButtonList>svg{
+    width: 20px;
+    height: 20px;
+}
+
+.subButtonList>span{
+    display: inline-block;
+    margin-left: 4px;
+    text-decoration: underline;
+    text-underline-position: under;
+}
+
+.bot path {
+    fill: rgb(34, 34, 34);
+}
+
+.applyNewWindow{
+    position: fixed;
+    z-index: 3;
+    background-color: rgb(255, 255, 255);
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 8px 16px;
+    height: 100%;
+    left: calc(50% + 190px);
+    top: 220px;
+    width: 470px;
 }
