--- a/templates/resume/resume-edit.html
+++ b/templates/resume/resume-edit.html
@@ -776,7 +776,7 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <div class="sc-37e5c3fd-1 eLwAcH">
+                                        <div class="membercareer">
                                             <h1 class="sc-37e5c3fd-2 iJDSDP">경력(업무경험)<button type="button"
                                                     class="sc-36ed24cd-0 kQcQKn">📗경력 작성팁</button></h1>
                                             <div class="sc-4d995a0d-5 hlDoCF">
@@ -882,7 +882,7 @@
                                                 </svg> 경력 추가</button>
                                         </div>
                                     </div>
-                                    <div>
+                                    <!-- <div>
                                         <div class="sc-37e5c3fd-1 eLwAcH">
                                             <h1 class="sc-37e5c3fd-2 iJDSDP">프로젝트<button type="button"
                                                     class="sc-36ed24cd-0 kQcQKn">📗프로젝트 작성팁</button></h1>
@@ -992,8 +992,8 @@
                                                         clip-rule="evenodd"></path>
                                                 </svg> 프로젝트 추가</button>
                                         </div>
-                                    </div>
-                                    <div>
+                                    </div> -->
+                                    <!-- <div>
                                         <div class="sc-37e5c3fd-1 eLwAcH">
                                             <h1 class="sc-37e5c3fd-2 cxMYpc">교육이력<button type="button"
                                                     class="sc-36ed24cd-0 kQcQKn">📗교육이력 작성팁</button></h1>
@@ -1111,7 +1111,7 @@
                                                         clip-rule="evenodd"></path>
                                                 </svg> 교육이력 추가</button>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div>
                                         <div class="sc-37e5c3fd-1 eLwAcH">
                                             <h1 class="sc-37e5c3fd-2 cxMYpc">기타사항<button type="button"
