--- a/templates/resume/resume-edit.html
+++ b/templates/resume/resume-edit.html
@@ -777,8 +777,8 @@
                                     </div>
                                     <div>
                                         <div class="membercareer">
-                                            <h1 class="sc-37e5c3fd-2 iJDSDP">경력(업무경험)<button type="button"
-                                                    class="sc-36ed24cd-0 kQcQKn">📗경력 작성팁</button></h1>
+                                            <h1 class="membercareer-title">경력(업무경험)<button type="button"
+                                                    class="right-tooltip">📗경력 작성팁</button></h1>
                                             <div class="sc-4d995a0d-5 hlDoCF">
                                                 <div class="sc-4d995a0d-8 ftmYTx"></div>
                                                 <div class="sc-4d995a0d-3 sc-4d995a0d-7 eNGbpO dFOUAj">
